// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`messages component renders the UI as expected 1`] = `
<div
  className="messages"
>
  Messages
  <div
    className="unread_count"
  >
    4
  </div>
</div>
`;

exports[`messages component renders the UI as expected with no unreads 1`] = `
<div
  className="messages"
>
  Messages
</div>
`;
